# detect-commented-terraform

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  detect_commented_terraform.py  pyproject.toml
.github/workflows/: test.yml
src/detect_commented_terraform/: __init__.py  cli.py
tests/: test_cli.py  test_detect_commented_terraform.py
