[project]
name = "detect-commented-terraform"
version = "1.0.0"
description = "Pre-commit hook to detect commented-out Terraform code in .tf files."
authors = [{ name = "Chris McQuaid", email = "chris@thetestlabs.io" }]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[project.scripts]
detect-commented-terraform = "detect_commented_terraform:main"

[tool.black]
line-length = 100

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.isort]
profile = "black"
line_length = 100
length_sort = true
force_single_line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"