[project]
name = "detect-commented-terraform"
version = "1.0.18"
description = "Detect commented-out Terraform code in your codebase"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chris McQuaid", email = "chris@thetestlabs.io" }
]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
detect-commented-terraform = "detect_commented_terraform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[tool.ruff]
fix = true
line-length = 100
src = ["detect_commented_terraform", "test"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.isort]
line_length = 100
length_sort = true
force_single_line = true

[tool.hatch.build.targets.wheel]
packages = ["src/detect_commented_terraform"]
